arlex-derive/tests/cases/accounts_init_no_payer.stderr
error: init requires both 'payer' and 'space' constraints
 --> tests/cases/accounts_init_no_payer.rs:7:9
  |
7 |     pub data: &'info AccountView,
  |         ^^^^
